syntax = "proto3";

package com.se498.dailyreporting.grpc;

option java_multiple_files = true;
option java_package = "com.se498.dailyreporting.grpc";
option java_outer_classname = "DailyReportingProto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

// Service definition
service DailyReportingService {
  // Report Operations
  rpc CreateReport(CreateReportRequest) returns (DailyReportResponse);
  rpc GetReport(GetReportRequest) returns (DailyReportResponse);
  rpc UpdateReport(UpdateReportRequest) returns (DailyReportResponse);
  rpc SubmitReport(SubmitReportRequest) returns (DailyReportResponse);
  rpc ApproveReport(ApproveReportRequest) returns (DailyReportResponse);
  rpc RejectReport(RejectReportRequest) returns (DailyReportResponse);
  rpc DeleteReport(DeleteReportRequest) returns (DeleteReportResponse);
  rpc GetReportsByProject(GetReportsByProjectRequest) returns (GetReportsByProjectResponse);
  rpc GetReportsByStatus(GetReportsByStatusRequest) returns (GetReportsByStatusResponse);

  // Activity Operations
  rpc AddActivity(AddActivityRequest) returns (ActivityResponse);
  rpc GetActivity(GetActivityRequest) returns (ActivityResponse);
  rpc GetActivitiesByReport(GetActivitiesByReportRequest) returns (GetActivitiesByReportResponse);
  rpc UpdateActivity(UpdateActivityRequest) returns (ActivityResponse);
  rpc UpdateActivityProgress(UpdateActivityProgressRequest) returns (ActivityResponse);
  rpc DeleteActivity(DeleteActivityRequest) returns (DeleteActivityResponse);

  // Analytics Operations
  rpc GetReportProgress(GetReportProgressRequest) returns (GetReportProgressResponse);
  rpc IsReportComplete(IsReportCompleteRequest) returns (IsReportCompleteResponse);
  rpc GetTotalDuration(GetTotalDurationRequest) returns (GetTotalDurationResponse);
}

// Enum definitions
enum ReportStatus {
  REPORT_STATUS_UNSPECIFIED = 0;
  REPORT_STATUS_DRAFT = 1;
  REPORT_STATUS_SUBMITTED = 2;
  REPORT_STATUS_APPROVED = 3;
  REPORT_STATUS_REJECTED = 4;
}

enum ActivityStatus {
  ACTIVITY_STATUS_UNSPECIFIED = 0;
  ACTIVITY_STATUS_PLANNED = 1;
  ACTIVITY_STATUS_IN_PROGRESS = 2;
  ACTIVITY_STATUS_COMPLETED = 3;
  ACTIVITY_STATUS_DELAYED = 4;
  ACTIVITY_STATUS_CANCELLED = 5;
}

// Message definitions
message Date {
  int32 year = 1;
  int32 month = 2;
  int32 day = 3;
}

message DailyReport {
  string id = 1;
  string project_id = 2;
  Date report_date = 3;
  ReportStatus status = 4;
  google.protobuf.StringValue notes = 5;
  repeated Activity activities = 6;
  google.protobuf.Timestamp created_at = 7;
  string created_by = 8;
  google.protobuf.Timestamp updated_at = 9;
  google.protobuf.StringValue updated_by = 10;
  double progress = 11;
  bool complete = 12;
}

message Activity {
  string id = 1;
  string report_id = 2;
  string description = 3;
  string category = 4;
  google.protobuf.Timestamp start_time = 5;
  google.protobuf.Timestamp end_time = 6;
  double progress = 7;
  ActivityStatus status = 8;
  google.protobuf.StringValue notes = 9;
  repeated string personnel = 10;
  google.protobuf.Timestamp created_at = 11;
  string created_by = 12;
  google.protobuf.Timestamp updated_at = 13;
  google.protobuf.StringValue updated_by = 14;
  int64 duration_minutes = 15;
}

// Request and Response messages
message CreateReportRequest {
  string project_id = 1;
  Date report_date = 2;
  google.protobuf.StringValue notes = 3;
  string username = 4;
}

message GetReportRequest {
  string report_id = 1;
}

message UpdateReportRequest {
  string report_id = 1;
  google.protobuf.StringValue notes = 2;
  string username = 3;
}

message SubmitReportRequest {
  string report_id = 1;
  string username = 2;
}

message ApproveReportRequest {
  string report_id = 1;
  string username = 2;
}

message RejectReportRequest {
  string report_id = 1;
  string reason = 2;
  string username = 3;
}

message DeleteReportRequest {
  string report_id = 1;
}

message DeleteReportResponse {
  bool success = 1;
}

message GetReportsByProjectRequest {
  string project_id = 1;
  Date start_date = 2;
  Date end_date = 3;
}

message GetReportsByProjectResponse {
  repeated DailyReport reports = 1;
}

message GetReportsByStatusRequest {
  ReportStatus status = 1;
}

message GetReportsByStatusResponse {
  repeated DailyReport reports = 1;
}

message DailyReportResponse {
  DailyReport report = 1;
}

message AddActivityRequest {
  string report_id = 1;
  string description = 2;
  string category = 3;
  google.protobuf.Timestamp start_time = 4;
  google.protobuf.Timestamp end_time = 5;
  double progress = 6;
  ActivityStatus status = 7;
  google.protobuf.StringValue notes = 8;
  repeated string personnel = 9;
  string username = 10;
}

message GetActivityRequest {
  string activity_id = 1;
}

message GetActivitiesByReportRequest {
  string report_id = 1;
}

message GetActivitiesByReportResponse {
  repeated Activity activities = 1;
}

message UpdateActivityRequest {
  string activity_id = 1;
  string description = 2;
  string category = 3;
  google.protobuf.Timestamp start_time = 4;
  google.protobuf.Timestamp end_time = 5;
  double progress = 6;
  ActivityStatus status = 7;
  google.protobuf.StringValue notes = 8;
  repeated string personnel = 9;
}

message UpdateActivityProgressRequest {
  string activity_id = 1;
  double progress = 2;
  string username = 3;
}

message DeleteActivityRequest {
  string activity_id = 1;
}

message DeleteActivityResponse {
  bool success = 1;
}

message ActivityResponse {
  Activity activity = 1;
}

message GetReportProgressRequest {
  string report_id = 1;
}

message GetReportProgressResponse {
  double progress = 1;
}

message IsReportCompleteRequest {
  string report_id = 1;
}

message IsReportCompleteResponse {
  bool is_complete = 1;
}

message GetTotalDurationRequest {
  string report_id = 1;
}

message GetTotalDurationResponse {
  int64 duration_minutes = 1;
}